[gd_scene load_steps=4 format=3 uid="uid://caba367xro747"]

[ext_resource type="Script" path="res://scripts/opening.gd" id="1_1x8y2"]
[ext_resource type="FontFile" uid="uid://ettwgfhg81x0" path="res://assets/fonts/BloodyTerror-GOW9Z.ttf" id="2_8vohd"]
[ext_resource type="Texture2D" uid="uid://37j4maquwl86" path="res://assets/sprites/game_bg.jpg" id="3_tygrl"]

[node name="Opening" type="CanvasLayer"]
script = ExtResource("1_1x8y2")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(572.25, 323.5)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_tygrl")

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -25.0
offset_right = 82.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "KEY_START"

[node name="CloseButton" type="Button" parent="."]
offset_right = 50.0
offset_bottom = 31.0
text = "KEY_CLOSE"

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -188.0
offset_right = 188.0
offset_bottom = 325.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_8vohd")
theme_override_font_sizes/font_size = 150
text = "MDR"

[node name="LanguageButton" type="OptionButton" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -110.0
offset_bottom = 31.0
grow_horizontal = 0
alignment = 1
item_count = 2
selected = 0
allow_reselect = true
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "Fran√ßais"
popup/item_1/id = 1

[connection signal="button_down" from="StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="CloseButton" to="." method="_on_close_button_button_down"]
[connection signal="item_selected" from="LanguageButton" to="." method="_on_language_button_item_selected"]
